Fix color contrast error in styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,13 +58,13 @@ img {
     color: green;
 }
 
-.correct-answer {
+/*.correct-answer {
     background: green;
 }
 
 .wrong-answer {
     background: red;
-}
+}*/
 
 .wrong {
     float: right;
